--- a/projects/components/media/media.component.html
+++ b/projects/components/media/media.component.html
@@ -3,7 +3,7 @@
     <i nz-icon nzType="import"></i>
     导入
   </button>
-  <button *nzSpaceItem type="button" nz-button nzType="link">
+  <button *nzSpaceItem type="button" nz-button nzType="link" [disabled]="values?.length === 0" (click)="openSort()">
     <i nz-icon nzType="sort-descending"></i>
     排序
   </button>
@@ -48,3 +48,28 @@
     </nz-col>
   </nz-row>
 </nz-list>
+
+<nz-drawer nzTitle="排序" [nzVisible]="sortVisible" nzPlacement="right" [nzWidth]="420" (nzOnClose)="closeSort()">
+  <ng-container *nzDrawerContent>
+    <nz-list cdkDropList (cdkDropListDropped)="sort($event)">
+      <nz-list-item *ngFor="let x of values" cdkDrag>
+        <div class="drag-placeholder" *cdkDragPlaceholder></div>
+        <div class="meta meta-small">
+          <ng-container [ngSwitch]="wpxType">
+            <ng-container *ngSwitchCase="'pictures'">
+              <img nz-image nzDisablePreview [nzSrc]="[x, 'thumbnail'] | wpxAssets" [alt]="x" />
+            </ng-container>
+            <ng-container *ngSwitchCase="'videos'">
+              <img nz-image nzDisablePreview [nzSrc]="[x + '_chart'] | wpxAssets" [alt]="x" />
+            </ng-container>
+          </ng-container>
+        </div>
+        <ul nz-list-item-actions>
+          <nz-list-item-action>
+            <button cdkDragHandle nzShape="circle" nz-button nzType="dashed"><i nz-icon nzType="drag"></i></button>
+          </nz-list-item-action>
+        </ul>
+      </nz-list-item>
+    </nz-list>
+  </ng-container>
+</nz-drawer>
