--- a/projects/components/media/media.component.scss
+++ b/projects/components/media/media.component.scss
@@ -12,3 +12,25 @@
     transform: translate(-50%, -50%);
   }
 }
+
+.meta-small {
+  height: 80px;
+  width: 128px;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.drag-item.cdk-drop-list-dragging .drag-item:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.drag-placeholder {
+  height: 105px;
+  width: 100%;
+  border: 1px dashed #d9d9d9;
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  text-align: center;
+  font-weight: bold;
+}
