--- a/projects/components/upload/avatar/avatar.component.html
+++ b/projects/components/upload/avatar/avatar.component.html
@@ -8,7 +8,14 @@
   (nzChange)="change($event)"
 >
   <ng-container *ngIf="values?.length !== 0; else uploadBtn">
-    <img nz-image nzDisablePreview [nzSrc]="[values![0], 'thumbnail'] | wpxAssets" [nzFallback]="wpxFallback" alt="" />
+    <img
+      wpxRetry
+      nz-image
+      nzDisablePreview
+      [nzSrc]="[values![0], 'thumbnail'] | wpxAssets"
+      [nzFallback]="wpxFallback"
+      alt=""
+    />
   </ng-container>
   <ng-template #uploadBtn>
     <i nz-icon [nzType]="!loading ? 'plus' : 'loading'"></i>
