--- a/projects/settings/src/lib/pages/tab-indexes/form/form.component.html
+++ b/projects/settings/src/lib/pages/tab-indexes/form/form.component.html
@@ -35,8 +35,8 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired>唯一</nz-form-label>
-    <nz-form-control>
+    <nz-form-label nzRequired>唯一索引</nz-form-label>
+    <nz-form-control nzExtra="如果存在具有相同内容的现有记录，则无法创建记录">
       <nz-switch formControlName="unique"></nz-switch>
     </nz-form-control>
   </nz-form-item>
