--- a/projects/components/dynamic/table/table.component.html
+++ b/projects/components/dynamic/table/table.component.html
@@ -1,5 +1,5 @@
 <wpx-layout>
-  <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增">
+  <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增" (click)="form()">
     <i nz-icon nzType="plus"></i>
   </button>
 </wpx-layout>
