--- a/projects/components/dynamic/form/form.component.html
+++ b/projects/components/dynamic/form/form.component.html
@@ -1,5 +1,5 @@
 <wpx-layout> </wpx-layout>
 
 <nz-card>
-  <wpx-form></wpx-form>
+  <wpx-form [wpxFields]="fields" [wpxRules]="rules"></wpx-form>
 </nz-card>
