--- a/src/app/example/form/form.component.html
+++ b/src/app/example/form/form.component.html
@@ -1,19 +1,54 @@
-<wpx-layout wpxTitle="动态表单"> </wpx-layout>
+<wpx-layout wpxTitle="媒体表单">
+  <wpx-upload-transport *wpxLayoutAction></wpx-upload-transport>
+</wpx-layout>
 
-<nz-row [nzGutter]="16">
-  <nz-col [nzSpan]="18">
-    <nz-card>
-      <wpx-form [wpxFields]="fields" [wpxRules]="rules"></wpx-form>
-    </nz-card>
-  </nz-col>
-  <nz-col [nzSpan]="6">
-    <nz-card>
-      <nz-descriptions [nzColumn]="1" nzLayout="vertical">
-        <nz-descriptions-item nzTitle="更新时间">2022-02-08 16:49</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="操作">
-          <button nz-button nzType="primary">提交</button>
-        </nz-descriptions-item>
-      </nz-descriptions>
-    </nz-card>
-  </nz-col>
-</nz-row>
+<nz-card>
+  <form nz-form nzLayout="vertical" [formGroup]="form" (wpxSubmit)="submit($event)">
+    <nz-form-item>
+      <nz-form-label nzRequired>复选</nz-form-label>
+      <nz-form-control>
+        <wpx-checkbox [options]="featureOptions" formControlName="feature"></wpx-checkbox>
+      </nz-form-control>
+    </nz-form-item>
+
+    <nz-form-item>
+      <nz-form-label nzRequired>图片上传</nz-form-label>
+      <nz-form-control>
+        <wpx-upload-avatar
+          wpxExt="image"
+          [wpxAccept]="['image/jpeg', 'image/png']"
+          [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"
+          formControlName="avatar"
+        >
+        </wpx-upload-avatar>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label nzRequired>图库</nz-form-label>
+      <nz-form-control>
+        <wpx-media
+          wpxType="pictures"
+          [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"
+          formControlName="picture"
+          (ngModelChange)="test($event)"
+        ></wpx-media>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label nzRequired>视频库</nz-form-label>
+      <nz-form-control>
+        <wpx-media
+          wpxType="videos"
+          [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"
+          formControlName="video"
+          (ngModelChange)="test($event)"
+        ></wpx-media>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-control>
+        <button nz-button nzType="primary" [disabled]="!form?.valid">提交</button>
+      </nz-form-control>
+    </nz-form-item>
+  </form>
+</nz-card>
