--- a/src/app/example/form/form.component.html
+++ b/src/app/example/form/form.component.html
@@ -7,7 +7,7 @@
     <nz-form-item>
       <nz-form-label nzRequired>复选</nz-form-label>
       <nz-form-control>
-        <wpx-checkbox [options]="featureOptions" formControlName="feature"></wpx-checkbox>
+        <wpx-checkbox [wpxOptions]="featureOptions" formControlName="feature"></wpx-checkbox>
       </nz-form-control>
     </nz-form-item>
 
