--- a/src/app/example/form/form.component.html
+++ b/src/app/example/form/form.component.html
@@ -1,4 +1,4 @@
-<wpx-layout wpxTitle="媒体表单">
+<wpx-layout wpxTitle="静态表单">
   <wpx-upload-transport *wpxLayoutAction></wpx-upload-transport>
 </wpx-layout>
 
