--- a/src/app/example/table/table.component.html
+++ b/src/app/example/table/table.component.html
@@ -7,5 +7,5 @@
 </wpx-layout>
 
 <nz-card [nzTitle]="table.wpxSearch" [nzExtra]="table.wpxTool">
-  <wpx-table #table wpxKey="ex_orders" [wpxApi]="orders" [wpxFields]="fields"></wpx-table>
+  <wpx-table #table [wpxKey]="key" [wpxApi]="orders" [wpxFields]="fields"></wpx-table>
 </nz-card>
