--- a/src/app/example/form/form.component.html
+++ b/src/app/example/form/form.component.html
@@ -12,6 +12,13 @@
     </nz-form-item>
 
     <nz-form-item>
+      <nz-form-label nzRequired>富文本</nz-form-label>
+      <nz-form-control>
+        <wpx-richtext formControlName="text" wpxPlaceholder="请输入内容"></wpx-richtext>
+      </nz-form-control>
+    </nz-form-item>
+
+    <nz-form-item>
       <nz-form-label nzRequired>图片上传</nz-form-label>
       <nz-form-control>
         <wpx-upload-avatar
