--- a/projects/components/richtext/richtext.component.html
+++ b/projects/components/richtext/richtext.component.html
@@ -5,7 +5,7 @@
     placeholder="标题"
     nzBorderless
     [(ngModel)]="title"
-    (ngModelChange)="titleChanged()"
+    (ngModelChange)="setTitle()"
   />
 </ng-template>
 
