--- a/src/app/example/form/form.component.html
+++ b/src/app/example/form/form.component.html
@@ -16,7 +16,7 @@
       <nz-form-control>
         <wpx-richtext
           formControlName="text"
-          wpxPlaceholder="请输入内容"
+          wpxPlaceholder="请输入内容，按 TAB 唤起更多"
           [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"
         ></wpx-richtext>
       </nz-form-control>
