--- a/projects/center/src/lib/profile/info/info.component.html
+++ b/projects/center/src/lib/profile/info/info.component.html
@@ -1,1 +1,95 @@
 <wpx-layout wpxTitle="基本信息"> </wpx-layout>
+
+<ng-template #title> weplanx <nz-tag>61e8198fd7488f31f838d1be</nz-tag> </ng-template>
+
+<nz-card [nzTitle]="title">
+  <form nz-form nzLayout="vertical" [formGroup]="form" (wpxSubmit)="submit($event)">
+    <nz-row [nzGutter]="24">
+      <nz-col nzFlex="600px">
+        <nz-form-item>
+          <nz-form-label>称呼</nz-form-label>
+          <nz-form-control style="width: 328px">
+            <input nz-input placeholder="请输入" formControlName="name" />
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-label>头像</nz-form-label>
+          <nz-form-control>
+            <wpx-upload-avatar
+              wpxExt="image"
+              [wpxAccept]="['image/jpeg', 'image/png']"
+              [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"
+              formControlName="avatar"
+            >
+            </wpx-upload-avatar>
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-label>国家/地区</nz-form-label>
+          <nz-form-control style="width: 192px">
+            <nz-select formControlName="region"> </nz-select>
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-label>所在省市</nz-form-label>
+          <nz-form-control style="width: 328px">
+            <nz-cascader></nz-cascader>
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-label>街道地址</nz-form-label>
+          <nz-form-control style="width: 448px">
+            <input nz-input placeholder="请输入" formControlName="address" />
+          </nz-form-control>
+        </nz-form-item>
+      </nz-col>
+      <nz-col nzFlex="auto">
+        <nz-form-item>
+          <nz-form-label>个人简介</nz-form-label>
+          <nz-form-control style="width: 448px">
+            <textarea rows="4" nz-input placeholder="个人简介" formControlName="introduction"></textarea>
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-label>联系电话</nz-form-label>
+          <nz-form-control style="width: 448px" formArrayName="tel">
+            <ng-container *ngFor="let x of tel?.controls; index as i; first as isFirst">
+              <nz-input-group [formGroupName]="i" nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
+                <input style="width: 25%" type="text" nz-input formControlName="area" placeholder="区号" />
+                <input style="width: 65%" type="text" nz-input formControlName="number" placeholder="电话号码" />
+                <button nz-button type="button" nzType="default" style="width: 10%" (click)="removeTel(i)">
+                  <i nz-icon nzType="minus-circle"></i>
+                </button>
+              </nz-input-group>
+            </ng-container>
+            <button style="margin-top: 8px" nzBlock type="button" nz-button nzType="dashed" (click)="addTel()">
+              <i nz-icon nzType="plus-circle"></i> 新增联系电话
+            </button>
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-label>电子邮件</nz-form-label>
+          <nz-form-control style="width: 448px" formArrayName="email">
+            <ng-container *ngFor="let x of email?.controls; index as i; first as isFirst">
+              <nz-input-group nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
+                <input style="width: 90%" type="text" nz-input [formControlName]="i" placeholder="mail@example.com" />
+                <button nz-button type="button" nzType="default" style="width: 10%" (click)="removeEmail(i)">
+                  <i nz-icon nzType="minus-circle"></i>
+                </button>
+              </nz-input-group>
+            </ng-container>
+            <button style="margin-top: 8px" nzBlock type="button" nz-button nzType="dashed" (click)="addEmail()">
+              <i nz-icon nzType="plus-circle"></i> 新增邮件
+            </button>
+          </nz-form-control>
+        </nz-form-item>
+      </nz-col>
+    </nz-row>
+
+    <nz-form-item>
+      <nz-form-control>
+        <button nz-button nzType="primary" [disabled]="!form?.valid">提交</button>
+      </nz-form-control>
+    </nz-form-item>
+  </form>
+</nz-card>
