更新：个人中心

--- a/projects/center/src/lib/audit/history/history.component.html
+++ b/projects/center/src/lib/audit/history/history.component.html
@@ -1,1 +1,5 @@
-<wpx-layout wpxTitle="操作记录"> </wpx-layout>
+<wpx-layout></wpx-layout>
+
+<ng-template #title><b>操作记录</b></ng-template>
+
+<nz-card [nzTitle]="title"></nz-card>
