--- a/projects/center/src/lib/audit/session/session.component.html
+++ b/projects/center/src/lib/audit/session/session.component.html
@@ -1,1 +1,5 @@
-<wpx-layout wpxTitle="会话记录"> </wpx-layout>
+<wpx-layout></wpx-layout>
+
+<ng-template #title><b>会话记录</b></ng-template>
+
+<nz-card [nzTitle]="title"></nz-card>
