--- a/projects/center/src/lib/mine/calendar/calendar.component.html
+++ b/projects/center/src/lib/mine/calendar/calendar.component.html
@@ -1,1 +1,25 @@
-<wpx-layout wpxTitle="日历"> </wpx-layout>
+<wpx-layout></wpx-layout>
+
+<nz-card>
+  <nz-calendar>
+    <ul *nzDateCell="let date" class="events">
+      <ng-container [ngSwitch]="date.getDate()">
+        <ng-container *ngSwitchCase="8">
+          <li *ngFor="let item of listDataMap.eight">
+            <nz-badge [nzStatus]="item.type" [nzText]="item.content"></nz-badge>
+          </li>
+        </ng-container>
+        <ng-container *ngSwitchCase="10">
+          <li *ngFor="let item of listDataMap.ten">
+            <nz-badge [nzStatus]="item.type" [nzText]="item.content"></nz-badge>
+          </li>
+        </ng-container>
+        <ng-container *ngSwitchCase="11">
+          <li *ngFor="let item of listDataMap.eleven">
+            <nz-badge [nzStatus]="item.type" [nzText]="item.content"></nz-badge>
+          </li>
+        </ng-container>
+      </ng-container>
+    </ul>
+  </nz-calendar>
+</nz-card>
