--- a/projects/center/src/lib/profile/safety/safety.component.html
+++ b/projects/center/src/lib/profile/safety/safety.component.html
@@ -1,6 +1,8 @@
-<wpx-layout wpxTitle="安全设置"> </wpx-layout>
+<wpx-layout></wpx-layout>
 
-<nz-card>
+<ng-template #title><b>安全设置</b></ng-template>
+
+<nz-card [nzTitle]="title">
   <nz-list nzSize="large">
     <nz-list-item>
       <nz-list-item-meta>
