--- a/projects/center/src/lib/mine/workbench/workbench.component.html
+++ b/projects/center/src/lib/mine/workbench/workbench.component.html
@@ -10,7 +10,7 @@
       </div>
       <nz-space class="user-detail" nzDirection="vertical">
         <span *nzSpaceItem><i nz-icon nzType="idcard"></i> 运营人员</span>
-        <span *nzSpaceItem><i nz-icon nzType="partition"></i> XXX-运营部</span>
+        <span *nzSpaceItem><i nz-icon nzType="apartment"></i> XXX-运营部</span>
         <span *nzSpaceItem><i nz-icon nzType="home"></i> 中国</span>
       </nz-space>
       <nz-divider></nz-divider>
