--- a/projects/settings/src/lib/application/pages/pages.component.html
+++ b/projects/settings/src/lib/application/pages/pages.component.html
@@ -1,23 +1,20 @@
-<wpx-layout wpxTitle="页面管理" [wpxNoPadding]="true">
-  <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增" (click)="form()">
-    <i nz-icon nzType="plus"></i>
-  </button>
-</wpx-layout>
+<wpx-layout [wpxNoPadding]="true" [wpxSkip]="true"> </wpx-layout>
 
 <nz-layout class="pages-container">
-  <nz-sider class="pages-sider" nzTheme="light" [nzWidth]="300">
+  <nz-sider class="pages-sider" nzTheme="light" [nzWidth]="360">
     <nz-space style="margin-top: 12px">
-      <nz-input-group *nzSpaceItem nzSuffixIcon="search">
-        <input type="text" nz-input placeholder="搜索" [(ngModel)]="name" />
-      </nz-input-group>
       <nz-button-group *nzSpaceItem>
-        <button nz-button nzType="text" [nz-tooltip]="expand ? '全部收起' : '全部展开'" (click)="expanded()">
-          <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
-        </button>
         <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
           <i nz-icon nzType="reload"></i>
         </button>
+        <button nz-button nzType="text" [nz-tooltip]="expand ? '全部收起' : '全部展开'" (click)="expanded()">
+          <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
+        </button>
       </nz-button-group>
+      <nz-input-group *nzSpaceItem nzSuffixIcon="search">
+        <input type="text" nz-input placeholder="搜索" [(ngModel)]="name" />
+      </nz-input-group>
+      <button *nzSpaceItem nz-button nzType="primary" (click)="form()"> 新增 </button>
     </nz-space>
     <nz-divider style="margin: 12px 0"></nz-divider>
     <nz-tree
