--- a/projects/settings/src/lib/application/pages/pages.component.html
+++ b/projects/settings/src/lib/application/pages/pages.component.html
@@ -35,7 +35,7 @@
         <ng-container *ngIf="data?.[node.key] as page">
           <ng-container [ngSwitch]="page.kind">
             <ng-container *ngSwitchCase="'form'">
-              <i nz-icon nzType="form"></i>
+              <i nz-icon nzType="file-text"></i>
             </ng-container>
             <ng-container *ngSwitchCase="'dashboard'">
               <i nz-icon nzType="dashboard"></i>
