--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,40 +1,34 @@
-.login-layout {
+.main {
   height: 100%;
-  background: #fbfbfb;
+  background-repeat: no-repeat;
+  background-position: center 50px;
+  background-size: 100%;
 }
 
-.login-content {
-  margin: 25% auto 0;
+.login {
+  margin: 8% auto 0;
   width: 360px;
   border-radius: 3px;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 
   .logo {
-    width: 100%;
-    padding: 36px 0 24px;
+    padding: 24px 0;
     text-align: center;
-
-    img {
-      height: 128px;
-    }
   }
 
   h1 {
-    font-size: 20px;
     padding-bottom: 24px;
     text-align: center;
+    font-size: 18px;
   }
 }
 
-footer {
+.footer {
   text-align: center;
-  position: absolute;
-  bottom: 20px;
-  left: 0;
   width: 100%;
 
   p {
-    padding-top: 10px;
+    padding-top: 0.5em;
   }
 
   a {
