--- a/src/app/install/install.component.scss
+++ b/src/app/install/install.component.scss
@@ -7,6 +7,7 @@
 
 .install {
   margin: 6% auto 0;
+  padding: 24px;
   width: 600px;
   border-radius: 3px;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
