--- a/projects/common/src/lib/header/header.component.html
+++ b/projects/common/src/lib/header/header.component.html
@@ -5,30 +5,36 @@
         <ng-template #spaceSplit>
           <nz-divider nzType="vertical"></nz-divider>
         </ng-template>
-        <button *nzSpaceItem nz-button nzType="text" nz-dropdown [nzDropdownMenu]="menu">
-          <i nz-icon nzType="appstore"></i>
-          <nz-dropdown-menu #menu="nzDropdownMenu">
-            <ul class="app-menu" nz-menu nzSelectable>
-              <li nz-menu-item [routerLink]="['/pages']">
-                <i nz-icon nzType="home"></i> <span class="name">我的应用</span>
-              </li>
-              <li nz-menu-item [routerLink]="['/resources']">
-                <i nz-icon nzType="inbox"></i> <span class="name">服务资源</span>
-              </li>
-              <li nz-menu-item [routerLink]="['/settings']">
-                <i nz-icon nzType="tool"></i>
-                <span class="name">管理者工具</span>
-              </li>
-            </ul>
-          </nz-dropdown-menu>
+        <button
+          *nzSpaceItem
+          nz-button
+          nzType="text"
+          nz-popover
+          nzPopoverPlacement="bottomLeft"
+          [nzPopoverContent]="appQuickTemplate"
+        >
+          <i nz-icon nzType="appstore" nzTheme="twotone"></i>
+          <ng-template #appQuickTemplate>
+            <nz-space>
+              <button *nzSpaceItem nz-button nzType="text" nzSize="large" [routerLink]="['/pages']">
+                <i nz-icon nzType="home"></i>
+                <span class="name">主页 </span>
+              </button>
+              <button *nzSpaceItem nz-button nzType="text" nzSize="large" [routerLink]="['/resources']">
+                <i nz-icon nzType="inbox"></i>
+                <span class="name">资源</span>
+              </button>
+              <button *nzSpaceItem nz-button nzType="text" nzSize="large" [routerLink]="['/settings']">
+                <i nz-icon nzType="setting"></i>
+                <span class="name">设置</span>
+              </button>
+            </nz-space>
+          </ng-template>
         </button>
         <input *nzSpaceItem nz-input placeholder="应用导航搜索" nzBorderless nz-dropdown [nzDropdownMenu]="menu" />
         <nz-dropdown-menu #menu="nzDropdownMenu">
           <ul nz-menu nzSelectable>
-            <li nz-menu-item>1st menu item</li>
-            <li nz-menu-item>2nd menu item</li>
-            <li nz-menu-item>3rd menu item</li>
-            <li nz-menu-item nzDanger>4th danger item</li>
+            <li nz-menu-item>无相关信息</li>
           </ul>
         </nz-dropdown-menu>
       </nz-space>
